[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "datapungi-fed"
author = "James Otterson"
author-email = "jjotterson@gmail.com"
home-page = "https://github.com/jjotterson/datapungi-fed"
requires=[
    "requests",
    "pandas",
    "pytest",
    "pytest-html",
    "pyperclip",
    "lxml",
    "xlrd",
    "beautifulsoup4",
    "html5lib",
    "pyyaml",
]
description-file="README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
]